_sass/section.scss
.section {
  min-height: 700px;
  padding-top: 100px;
  padding-bottom: 100px;
  background-attachment: fixed;
  background-size: cover;
  background-position: center;

  &-title {
    padding-bottom: 40px;

    span, h1 {
      display: inline;
      text-transform: uppercase;
      font-family: $paragraph-font;
      font-size: 14px;
      font-weight: 700;
      letter-spacing: 3px;
      padding: 10px 18px;
      border: 1px solid #222;
      .dark & {
        border: 1px solid #fff;
      }
    }
  }
  
  &-content {
    margin-bottom: 40px;
  } 

  &.dark {
    color: #fff;
  }
  
  &.fullscreen {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
  }
}

